# clickhouse-adapter

./: .gitignore  Cargo.toml  Clippy.toml  readme.md  rust-toolchain.toml  rustfmt.toml
clickhouse-orm/: Cargo.toml
clickhouse-orm-macros/: Cargo.toml
clickhouse-orm-macros/src/: lib.rs
clickhouse-orm-macros/src/adapters/: attribute_parser.rs  mapping.rs  type_resolver.rs
clickhouse-orm-macros/src/adapters/head_options_macros/: engine_config.rs  engine_parser.rs  mod.rs
clickhouse-orm-macros/src/domain/: mod.rs  types.rs
clickhouse-orm/clickhouse-orm-macros/: Cargo.toml
clickhouse-orm/clickhouse-orm-macros/src/: engine.rs  lib.rs  sql_generator.rs  table_options.rs  type_mapping.rs
clickhouse-orm/clickhouse-orm-macros/src/adapters/: attribute_parser.rs  field_extractor.rs  mapping.rs  mod.rs  type_resolver.rs
clickhouse-orm/clickhouse-orm-macros/src/adapters/head_options_macros/: engine_config.rs  engine_parser.rs  mod.rs  table_name.rs  table_options.rs
clickhouse-orm/clickhouse-orm-macros/src/domain/: engine_config.rs  engine_parser.rs  field_definition.rs  mod.rs  table_options.rs  types.rs
clickhouse-orm/clickhouse-orm-macros/src/generator/: mod.rs  sql_builder.rs  sql_generator.rs
clickhouse-orm/src/: client.rs  engine.rs  error.rs  lib.rs  query.rs  repository.rs
clickhouse-orm/src/domain/: mod.rs
clickhouse-orm/src/domain/client/: client.rs
clickhouse-orm/src/domain/engine/: engine.rs  mod.rs  part_info.rs  replica_status.rs
clickhouse-orm/src/domain/errors/: default.rs
clickhouse-orm/src/domain/query/: query.rs
clickhouse-orm/src/domain/repository/: repository.rs
clickhouse-orm/src/infrastructure/adapters/: mod.rs
clickhouse-orm/src/infrastructure/adapters/client/: client.rs
clickhouse-orm/src/infrastructure/adapters/engine/: engine.rs  engine_options.rs  mod.rs
clickhouse-orm/src/usecase/query/: query.rs
clickhouse-orm/src/usecase/repository/: mod.rs
clickhouse-orm/src/usecase/repository/base/: aggregation.rs  base.rs  ddl.rs  dml.rs  dql.rs  mod.rs
clickhouse-orm/src/usecase/repository/merge_tree/: dql.rs  merge_tree_ops.rs  mod.rs
clickhouse-orm/src/usecase/repository/replicated_merge_tree/: dql.rs  mod.rs  replicated_merge_tree_ops.rs
clickhouse-orm/src/usecase/repository/utils/: clone_impl.rs  mod.rs
src/: lib.rs
src/domain/: mod.rs
src/domain/engine/: mod.rs
src/infrastructure/adapters/engine/: engine.rs
src/usecase/repository/base/: aggregations.rs  base.rs  ddl.rs  dml.rs  dql.rs  mod.rs  query_builder.rs
src/usecase/repository/merge_tree/: ddl.rs
src/usecase/repository/replicated_merge_tree/: ddl.rs  mod.rs
src/usecase/repository/utils/: clone_impl.rs
tests/: Cargo.toml  common.rs  docker-compose.yaml  page_view_tests.rs  user_tests.rs
tests/base/: aggregations_tests.rs  ddl_tests.rs  dml_tests.rs  dql_tests.rs  mod.rs
tests/src/: main.rs
tests/src/domain/: mod.rs  page_view.rs  user.rs
