[package]
name = "clickhouse-orm"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2.0.17"
clickhouse-orm-macros = { path = "./clickhouse-orm-macros" }

[dependencies.clickhouse]
version = "0.14.0"
features = ["inserter"]
