[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse-orm = { path = "../clickhouse-orm" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clickhouse = { version = "0.13.1" }
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3.20"